--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -48,5 +48,6 @@
   // Use 'postCreateCommand' to run commands after the container is created.
   // "postCreateCommand": "mvn clean package -DskipTests",
   // Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-  "remoteUser": "vscode"
-}
+  "remoteUser": "vscode":"claude-opus"
+: "microsoft-"copilot"
+{}
